--- a/site/themes/pyconth/templates/base.tmpl
+++ b/site/themes/pyconth/templates/base.tmpl
@@ -75,6 +75,7 @@ ${template_hooks['extra_head']()}
 </div>
 
 ${base.late_load_js()}
+    <script>$('a.image-reference:not(.islink) img:not(.islink)').parent().colorbox({rel:"gal",maxWidth:"100%",maxHeight:"100%",scalePhotos:true});</script>
     <!-- fancy dates -->
     <script>
     moment.locale("${momentjs_locales[lang]}");
@@ -82,16 +83,11 @@ ${base.late_load_js()}
     </script>
     <!-- end fancy dates -->
     <%block name="extra_js"></%block>
-    <script>
-    baguetteBox.run('a.reference:not(.islink)', {
-        captions: function(element) {
-            return element.getElementsByTagName('img')[0].alt;
-    }});
-    baguetteBox.run('img:not(.islink)', {
-        captions: function(element) {
-            return element.alt;
-    }});
-    </script>
+    % if annotations and post and not post.meta('noannotations'):
+        ${notes.code()}
+    % elif not annotations and post and post.meta('annotations'):
+        ${notes.code()}
+    % endif
 ${body_end}
 ${template_hooks['body_end']()}
 </body>
