--- a/site/themes/pyconth/templates/gallery.tmpl
+++ b/site/themes/pyconth/templates/gallery.tmpl
@@ -96,8 +96,7 @@ $("#gallery_container").flowr({
             }
         }
     });
-    baguetteBox.run('#gallery_container', {
-        captions: function(element) {
-            return element.getElementsByTagName('img')[0].alt;
-    }});</script>
+$("a.image-reference").colorbox({rel:"gal", maxWidth:"100%",maxHeight:"100%",scalePhotos:true});
+$('a.image-reference[href="'+window.location.hash.substring(1,1000)+'"]').click();
+</script>
 </%block>
