--- a/site/themes/pyconth/templates/base.tmpl
+++ b/site/themes/pyconth/templates/base.tmpl
@@ -7,8 +7,8 @@ ${base.html_headstart()}
 ### Leave this block alone.
 </%block>
 ${template_hooks['extra_head']()}
-</head>
-<body>
+</head> 
+<body class="${' '.join(pagekind)} ${' '.join(permalink.strip('/'+lang).split('/')) if permalink.strip('/'+lang) else 'index'}  lang_${lang} lang_${'rtl' if is_rtl else 'ltr'}">
 <a href="#content" class="sr-only sr-only-focusable">${messages("Skip to main content")}</a>
 
 <!-- Menubar -->
