--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -12,14 +12,29 @@ body.schedule-list-table table.table td { height: 1px; }
 body.schedule-list-table table.table td span.pyladies { display: block; height: 100%; background: green; }
 */
 
+body.schedule-list-table table,
+body.schedule-list-table th,
+body.schedule-list-table td {
+    border-left: none;
+    border-right: none;
+}
+
+body.schedule-list-table a {
+    font-weight: bold;
+    color: black;
+}
+
 span.pyladies { color: #fff2cc; }
-span.break { color: #d9ead3; }
+span.break { color: #689f54; }
 span.registration { color: #ff0; }
 span.other { color: #fff2cc; }
 span.beginner { color: #c9daf8; }
 span.intermediate { color: #e6b8af; }
 span.advanced { color: #d9d2e9; }
 span.thai { color: #00f; font-variant: small-caps; }
+
+span.fa { color: #7272e4; }
+table.table .fa:before { margin-right: 5px; }
 
 /*.. list-table:: Talk Schedule, 16 June */
 /*   :stub-columns: 1 */
@@ -33,13 +48,13 @@ span.thai { color: #00f; font-variant: small-caps; }
 /*     - Track 3 */
 /*    */
 /*2    * - 07:30 */
-body.schedule-list-table table.table.day1 tr:nth-of-type(2) { background-color: green; }
+body.schedule-list-table table.table.day1 tr:nth-of-type(2) { background-color: rgba(181, 160, 172,.3); }
 /*     - :pyladies:`PyLadies` */
 /*     - :pyladies:`...` */
 /*     - :pyladies:`...` */
 /*    */
 /*3    * - 08:00 */
-body.schedule-list-table table.table.day1 tr:nth-of-type(3) { background-color: green; }
+body.schedule-list-table table.table.day1 tr:nth-of-type(3) { background-color: rgba(181, 160, 172,.3); }
 body.schedule-list-table table.table.day1 tr:nth-of-type(3) td:nth-of-type(3) { background-color: white; }
 /*     - :pyladies:`...` */
 /*     - :pyladies:`...` */
@@ -51,7 +66,7 @@ body.schedule-list-table table.table.day1 tr:nth-of-type(3) td:nth-of-type(3) { 
 /*     - :registration:`...` */
 /*    */
 /*5    * - 09:00 */
-body.schedule-list-table table.table.day1 tr:nth-of-type(5) { background-color: green; }
+body.schedule-list-table table.table.day1 tr:nth-of-type(5) { background-color: rgba(181, 160, 172,.3); }
 /*     - :other:`Welcome and Introduction: Dylan Jay` */
 /*     - :other:`...` */
 /*     - :other:`...` */
