Tweak styles, add background colors

--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -7,25 +7,24 @@ body.frontpage header {
     display: none;
 }
 
-/*
-body.schedule-list-table table.table td { height: 1px; }
-body.schedule-list-table table.table td span.pyladies { display: block; height: 100%; background: green; }
-*/
-
-body.schedule-list-table table,
-body.schedule-list-table th,
-body.schedule-list-table td {
+/* body.schedule table.table td { height: 1px; }
+body.schedule table.table td span.pyladies { display: block; height: 100%; background: green; }
+*/ 
+body.schedule table,
+body.schedule th,
+body.schedule td {
     border-left: none;
     border-right: none;
 }
 
-body.schedule-list-table a {
+body.schedule a {
     font-weight: bold;
     color: black;
 }
 
 span.pyladies { color: #fff2cc; }
-span.break { color: #689f54; }
+span.break { color: #689f54; font-variant: small-caps; font-weight: bold; }
+span.break-title { color: #689f54; font-size: smaller; font-style: italic; }
 span.registration { color: #333; }
 span.other { color: #333; }
 span.beginner { color: #c9daf8; }
@@ -36,248 +35,81 @@ span.thai { color: #00f; font-variant: small-caps; }
 span.fa { color: #7272e4; }
 table.table .fa:before { margin-right: 5px; }
 
-/*.. list-table:: Talk Schedule, 16 June */
-/*   :stub-columns: 1 */
-/*   :header-rows: 1 */
-/*   :widths: 4 32 32 32 */
-/*   :class: table table-striped table-condensed */
+/* 1   * - 07:30 - :other:`PyLadies` */
+body.schedule table.table.day1 tbody tr:nth-of-type(1) { background-color: #ffe6e6; }
+/* 2   * - 08:00 - :pyladies:`...` */
+body.schedule table.table.day1 tr:nth-of-type(2) th { background-color: #ffe6e6; }
+body.schedule table.table.day1 tr:nth-of-type(2) td:nth-of-type(1) { background-color: #ffe6e6; }
+body.schedule table.table.day1 tr:nth-of-type(2) td:nth-of-type(2) { background-color: #ffe6e6; }
+/* 2   * - 08:00 - :registration:`...` */
+body.schedule table.table.day1 tr:nth-of-type(2) td:nth-of-type(3) { background-color: rgba(181, 160, 172, .3); }
+/* 3   * - 08:30 - :registration:`...` */
+body.schedule table.table.day1 tr:nth-of-type(3) { background-color: rgba(181, 160, 172,.3); }
 
-/*1  * - */
-/*     - Track 1 */
-/*     - Track 2 */
-/*     - Track 3 */
-/*    */
-/*2    * - 07:30 */
-body.schedule-list-table table.table.day1 tr:nth-of-type(2) { background-color: rgba(181, 160, 172,.3); }
-/*     - :pyladies:`PyLadies` */
-/*     - :pyladies:`...` */
-/*     - :pyladies:`...` */
-/*    */
-/*3    * - 08:00 */
-body.schedule-list-table table.table.day1 tr:nth-of-type(3) { background-color: rgba(181, 160, 172,.3); }
-body.schedule-list-table table.table.day1 tr:nth-of-type(3) td:nth-of-type(3) { background-color: white; }
-/*     - :pyladies:`...` */
-/*     - :pyladies:`...` */
-/*     - :registration:`Registration Opens /  Welcome Coffee` */
-/*    */
-/*4    * - 08:30 */
-/*     - :registration:`...` */
-/*     - :registration:`...` */
-/*     - :registration:`...` */
-/*    */
-/*5    * - 09:00 */
-body.schedule-list-table table.table.day1 tr:nth-of-type(5) { background-color: rgba(181, 160, 172,.3); }
-/*     - :other:`Welcome and Introduction: Dylan Jay` */
-/*     - :other:`...` */
-/*     - :other:`...` */
-/*    */
-/*6    * - 09:10 */
-/*     - Keynote Speech: Wes McKinney */
-/*     - Keynote Speech: Wes McKinney */
-/*     - Keynote Speech: Wes McKinney */
-/*    */
-/*7    * - 09:55 */
-/*     - :break:`The Spanish Inquisition / Break` */
-/*     - :break:`...` */
-/*     - :break:`...` */
-/*    */
-/*8    * - 10:25 */
-/*     - `Using Python to build a smart contract in NEO blockchain`_ :beginner:`Beginner` */
-/*     - `A Beginner's Guide to Deep Natural Language Processing with PyTorch`_ :intermediate:`Intermediate` */
-/*     - `AI in Security, Finance, and eCommerce`_ */
-/*    */
-/*9    * - 11:10 */
-/*     - :break:`Dog Kennel / Break` */
-/*     - :break:`...` */
-/*     - :break:`...` */
-/*    */
-/*10    * - 11:20 */
-/*     - `Python for Life Sciences`_ :intermediate:`Intermediate` */
-/*     - `Concurrent python`_ :intermediate:`Intermediate` :thai:`Thai` */
-/*     - `Pythonic Functional Programming with Coconut`_ :advanced:`Advanced` */
-/*    */
-/*11   * - 11:50 */
-/*     - :break:`Throatwobbler Mangrove / Break` */
-/*     - :break:`...` */
-/*     - :break:`...` */
-/*    */
-/*12   * - 11:55 */
-/*     - `Object detection and Human recognition with YOLO in Python`_ :beginner:`Beginner` */
-/*     - `Build dynamically scaled highly available python application with MySQL`_ */
-/*     - `Monitoring your Python Application`_ :beginner:`Beginner` */
-/*    */
-/*13   * - 12:40 */
-/*     - :break:`Spam, Spam, Egg, Bacon and Spam / Lunch Break` */
-/*     - :breaK:`...` */
-/*     - :breaK:`...` */
-/*    */
-/*14   * - 13:40 */
-/*     - `Rage Against The Learning Machine (A New Hope)`_ :intermediate:`Intermediate` */
-/*     - `การพัฒนาหุ่นยนต์ด้วยภาษา Python Developing robot with python`_ :beginner:`Beginner` :thai:`Thai` */
-/*     - `How many coin in your piggy bank with micro-python & 3D-Printer`_ */
-/*    */
-/*15   * - 14:10 */
-/*     - :break:`And now for something completely different / Break` */
-/*     - :break:`...` */
-/*     - :break:`...` */
-/*    */
-/*16   * - 14:15 */
-/*     - `Python Software Development for Hollywood Blockbuster Movie VFX in Thailand`_ */
-/*     - `The power of Jupyter notebooks`_ :beginner:`Beginner` */
-/*     - `A journey from Monolith into Microservices architecture`_ */
-/*    */
-/*17   * - 15:00 */
-/*     - :break:`Cycling Tour / Break` */
-/*     - :break:`...` */
-/*     - :break:`...` */
-/*    */
-/*18   * - 15:10 */
-/*     - `Artisanal Async Adventures`_ */
-/*     - `Image Classification using Deep Learning in Python`_ */
-/*     - `Teaching and Learning with Python`_ */
-/*    */
-/*19   * - 15:40 */
-/*     - :break:`Romanes eunt domus / Break` */
-/*     - :break:`...` */
-/*     - :break:`...` */
-/*    */
-/*20   * - 15:45 */
-/*     - `Creating amazing APIs in Flask with Flask RESTplus`_ :intermediate:`Intermediate` */
-/*     - `Unimaginable Things in Python`_ :thai:`Thai` */
-/*     - `CoderDojo - a free programming club for kids`_ */
-/*    */
-/*21   * - 16:15 */
-/*     - :break:`My Brain Hurts / Break` */
-/*     - :break:`...` */
-/*     - :break:`...` */
-/*    */
-/*22   * - 16:20 */
-/*     - `Writing a good frontend test cases using RobotFramework`_ */
-/*     - `Flask ณ Kaidee`_ :beginner:`Beginner` :thai:`Thai` */
-/*     - `Deep Learning in the Household`_ :beginner:`Beginner` */
-/*    */
-/*23   * - 16:50 */
-/*     - :break:`Ministry of Silly Walks / Break` */
-/*     - :break:`...` */
-/*     - :break:`...` */
-/*    */
-/*24   * - 17:05 */
-/*     - Lightning Talks */
-/*     - Lightning Talks */
-/*     - Lightning Talks */
+/* 4   * - 09:00 - :other:`Welcome and Introduction: Dylan Jay` */
+/* 5   * - 09:10 - Keynote Speech: Wes McKinney */
+/* 6   * - 09:55 - :break:`The Spanish Inquisition / Break` */
+body.schedule table.table.day1 tr:nth-of-type(6) { background-color: rgba(181, 160, 172,.2); }
+/* 7   * - 10:25 - `Using Python to build a smart contract in NEO blockchain`_ :beginner:`Beginner` */
+/* 8   * - 11:10 - :break:`Dog Kennel / Break` */
+body.schedule table.table.day1 tr:nth-of-type(8) { background-color: rgba(181, 160, 172,.2); }
+/* 9   * - 11:20 - `Python for Life Sciences`_ :intermediate:`Intermediate` */
+/* 10   * - 11:50 - :break:`Throatwobbler Mangrove / Break` */
+body.schedule table.table.day1 tr:nth-of-type(10) { background-color: rgba(181, 160, 172,.2); }
+/* 11   * - 11:55 - `Object detection and Human recognition with YOLO in Python`_ :beginner:`Beginner` */
+/* 12   * - 12:40 - :break:`Spam, Spam, Egg, Bacon and Spam / Lunch Break` */
+body.schedule table.table.day1 tr:nth-of-type(12) { background-color: rgba(181, 160, 172,.2); }
+/* 13   * - 13:40 - `Rage Against The Learning Machine (A New Hope)`_ :intermediate:`Intermediate` */
+/* 14   * - 14:10 - :break:`And now for something completely different / Break` */
+body.schedule table.table.day1 tr:nth-of-type(14) { background-color: rgba(181, 160, 172,.2); }
+/* 15   * - 14:15 - `Python Software Development for Hollywood Blockbuster Movie VFX in Thailand`_ */
+/* 16   * - 15:00 - :break:`Cycling Tour / Break` */
+body.schedule table.table.day1 tr:nth-of-type(16) { background-color: rgba(181, 160, 172,.2); }
+/* 17   * - 15:10 - `Artisanal Async Adventures`_ */
+/* 18   * - 15:40 - :break:`Romanes eunt domus / Break` */
+body.schedule table.table.day1 tr:nth-of-type(18) { background-color: rgba(181, 160, 172,.2); }
+/* 19   * - 15:45 - `Creating amazing APIs in Flask with Flask RESTplus`_ :intermediate:`Intermediate` */
+/* 20   * - 16:15 - :break:`My Brain Hurts / Break` */
+body.schedule table.table.day1 tr:nth-of-type(20) { background-color: rgba(181, 160, 172,.2); }
+/* 21   * - 16:20 - `Writing a good frontend test cases using RobotFramework`_ */
+/* 22   * - 16:50 - :break:`Ministry of Silly Walks / Break` */
+body.schedule table.table.day1 tr:nth-of-type(22) { background-color: rgba(181, 160, 172,.2); }
+/* 23   * - 17:05 - Lightning Talks */
 
-
-/*17 June */
-/*======= */
-
-/*.. list-table:: Talk Schedule, 17 June */
-/*   :stub-columns: 1 */
-/*   :header-rows: 1 */
-/*   :widths: 4 32 32 32 */
-/*   :class: table table-striped table-condensed */
-
-/*1  * -  */
-/*     - Track 1 */
-/*     - Track 2 */
-/*     - Track 3 */
-/*    */
-/*2   * - 08:30 */
-/*     - :other:`Registration Opens /  Welcome Coffee` */
-/*     - :other:`Registration Opens /  Welcome Coffee` */
-/*     - :other:`Registration Opens /  Welcome Coffee` */
-/*    */
-/*3   * - 09:10 */
-/*     - `Attack of Pythons: Gotchas and Landmines in Python`_ */
-/*     - `Alternative way for build async server`_ :intermediate:`Intermediate` :thai:`Thai` */
-/*     - :break:`Your mother was a hamster and your father smelt of elderberries / Break` */
-/*    */
-/*4   * - 09:40 */
-/*     - :break:`Fish Slapping Dance / Break` */
-/*     - :break:`...` */
-/*     - :break:`Your mother was a hamster and your father smelt of elderberries / Break` */
-/*    */
-/*5   * - 09:50 */
-/*     - `Introduction to serverless Python with AWS Lambda`_ :beginner:`Beginner` */
-/*     - `Logo Detection Using PyTorch`_ */
-/*     - :break:`Your mother was a hamster and your father smelt of elderberries / Break` */
-/*    */
-/*6   * - 10:20 */
-/*     - :break:`Dinsdale / Break` */
-/*     - :break:`...` */
-/*     - :break:`Your mother was a hamster and your father smelt of elderberries / Break` */
-/*    */
-/*7   * - 10:25 */
-/*     - `Building a sustainable codebases with Type Annotations`_ :intermediate:`Intermediate` */
-/*     - `Python for Self-Trackers: How to Visualize and Better Understand Your Life in Data`_ */
-/*     - :break:`Your mother was a hamster and your father smelt of elderberries / Break` */
-/*    */
-/*8   * - 11:10 */
-/*     - :break:`Exploding Penguins on TV Set / Break`  */
-/*     - :break:`...` */
-/*     - :break:`Your mother was a hamster and your father smelt of elderberries / Break` */
-/*    */
-/*9   * - 11:20 */
-/*     - `Playing with Social Network, Geo-Spatial, Financial Flow, and Banking System Data: Graph-Theoretic Computation in Python`_ */
-/*     - `Django Backend from zero to deployment`_ :beginner:`Beginner` */
-/*     - Workshop To Be Announced */
-/*    */
-/*10   * - 12:05 */
-/*     - :break:`Lumberjack Song / Break` */
-/*     - :break:`...` */
-/*     - Workshop To Be Announced */
-/*    */
-/*11   * - 12:15 */
-/*     - `Aaaarrgghh, Spider! Web scraping with Scrapy`_ :intermediate:`Intermediate` */
-/*     - `A JS developer tries python, escapes from Jupyter to build a product`_ */
-/*     - Workshop To Be Announced */
-/*    */
-/*12   * - 12:45 */
-/*     - :break:`Salmon Mousse /  Lunch Break` */
-/*     - :break:`...` */
-/*     - :break:`...` */
-/*    */
-/*13   * - 13:45 */
-/*     - `Enabling Blockchain Energy Trading among Smart Buildings through the Use of Multi-Agent Systems and Internet of Things Devices`_ */
-/*     - `DIY: Python with partially charged batteries`_ :thai:`Thai` */
-/*     - `Why I Fell in Love with Tavern (and why I'm staying)`_ :beginner:`Beginner` */
-/*    */
-/*14   * - 14:30 */
-/*     - :break:`Machine that goes "Ping!" / Break` */
-/*     - :break:`...` */
-/*     - `Why I Fell in Love with Tavern (and why I'm staying)`_ */
-/*    */
-/*15   * - 14:40 */
-/*     - `Python + XPath = Extra Parsing Power`_ :intermediate:`Intermediate` */
-/*     - `Introduce syntax and history of Python from 2.4 to 3.6`_ */
-/*     - `Why I Fell in Love with Tavern (and why I'm staying)`_ */
-/*    */
-/*16   * - 15:10 */
-/*     - :break:`Cheese Shop / Break` */
-/*     - :break:`...` */
-/*     - :break:`Dead Parrot / Break` */
-/*    */
-/*17   * - 15:15 */
-/*     - `Powerful geographic web framework GeoDjango`_ :beginner:`Beginner` */
-/*     - `Talk to your Python app - using LINE!`_ :intermediate:`Intermediate` */
-/*     - :break:`Dead Parrot / Break` */
-/*    */
-/*18   * - 15:45 */
-/*     - :break:`Ni! / Break` */
-/*     - :break:`...` */
-/*     - :break:`Dead Parrot / Break` */
-/*    */
-/*19   * - 15:55 */
-/*     - Lightning Talks */
-/*     - ... */
-/*     - ... */
-/*    */
-/*20   * - 16:55 */
-/*     - Keynote: Tiwa York */
-/*     - Keynote: Tiwa York */
-/*     - Keynote: Tiwa York */
-/*    */
-/*21   * - 17:40 */
-/*     - Closing */
-/*     - Closing */
-/*     - Closing */
-
+/*      * - - Track 1 */
+/* 1    * - 08:30 - :other:`Registration Opens /  Welcome Coffee` */
+/* 2    * - 09:10 - `Attack of Pythons: Gotchas and Landmines in Python`_ */
+body.schedule table.table.day2 tr:nth-of-type(2) td:nth-of-type(3) { background-color: rgba(181, 160, 172,.2); }
+/* 3    * - 09:40 - :break:`Fish Slapping Dance / Break` */
+body.schedule table.table.day2 tr:nth-of-type(3) { background-color: rgba(181, 160, 172,.2); }
+/* 4    * - 09:50 - `Introduction to serverless Python with AWS Lambda`_ :beginner:`Beginner` */
+body.schedule table.table.day2 tr:nth-of-type(4) td:nth-of-type(3) { background-color: rgba(181, 160, 172,.2); }
+/* 5    * - 10:20 - :break:`Dinsdale / Break` */
+body.schedule table.table.day2 tr:nth-of-type(5) { background-color: rgba(181, 160, 172,.2); }
+/* 6    * - 10:25 - `Building a sustainable codebases with Type Annotations`_ :intermediate:`Intermediate` */
+body.schedule table.table.day2 tr:nth-of-type(6) td:nth-of-type(3) { background-color: rgba(181, 160, 172,.2); }
+/* 7    * - 11:10 - :break:`Exploding Penguins on TV Set / Break` */
+body.schedule table.table.day2 tr:nth-of-type(7) { background-color: rgba(181, 160, 172,.2); }
+/* 8    * - 11:20 - `Playing with Social Network, Geo-Spatial, Financial Flow, and Banking System Data: Graph-Theoretic Computation in Python`_ */
+/* 9    * - 12:05 - :break:`Lumberjack Song / Break` */
+body.schedule table.table.day2 tr:nth-of-type(9) th { background-color: rgba(181, 160, 172,.2); }
+body.schedule table.table.day2 tr:nth-of-type(9) td:nth-of-type(1) { background-color: rgba(181, 160, 172,.2); }
+body.schedule table.table.day2 tr:nth-of-type(9) td:nth-of-type(2) { background-color: rgba(181, 160, 172,.2); }
+/* 10    * - 12:15 - `Aaaarrgghh, Spider! Web scraping with Scrapy`_ :intermediate:`Intermediate` */
+/* 11    * - 12:45 - :break:`Salmon Mousse /  Lunch Break` */
+body.schedule table.table.day2 tr:nth-of-type(11) { background-color: rgba(181, 160, 172,.2); }
+/* 12    * - 13:45 - `Enabling Blockchain Energy Trading among Smart Buildings through the Use of Multi-Agent Systems and Internet of Things Devices`_ */
+/* 13    * - 14:30 - :break:`Machine that goes "Ping!" / Break` */
+body.schedule table.table.day2 tr:nth-of-type(13) th { background-color: rgba(181, 160, 172,.2); }
+body.schedule table.table.day2 tr:nth-of-type(13) td:nth-of-type(1) { background-color: rgba(181, 160, 172,.2); }
+body.schedule table.table.day2 tr:nth-of-type(13) td:nth-of-type(2) { background-color: rgba(181, 160, 172,.2); }
+/* 14    * - 14:40 - `Python + XPath = Extra Parsing Power`_ :intermediate:`Intermediate` */
+/* 15    * - 15:10 - :break:`Cheese Shop / Break` */
+body.schedule table.table.day2 tr:nth-of-type(15) { background-color: rgba(181, 160, 172,.2); }
+/* 16    * - 15:15 - `Powerful geographic web framework GeoDjango`_ :beginner:`Beginner` */
+body.schedule table.table.day2 tr:nth-of-type(16) td:nth-of-type(3) { background-color: rgba(181, 160, 172,.2); }
+/* 17    * - 15:45 - :break:`Ni! / Break` */
+body.schedule table.table.day2 tr:nth-of-type(17) { background-color: rgba(181, 160, 172,.2); }
+/* 18    * - 15:55 - Lightning Talks */
+/* 19    * - 16:55 - Keynote: Tiwa York */
+/* 20    * - 17:40 - Closing */
