--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -36,46 +36,31 @@ span.thai { color: #00f; font-variant: small-caps; }
 span.fa { color: #7272e4; }
 table.table .fa:before { margin-right: 5px; }
 
-/* 1   * - 07:30 - :other:`PyLadies` */
-body.schedule table.table.day1 tbody tr:nth-of-type(1) { background-color: #ffe6e6; }
-/* 2   * - 08:00 - :pyladies:`...` */
-body.schedule table.table.day1 tr:nth-of-type(2) th { background-color: #ffe6e6; }
-body.schedule table.table.day1 tr:nth-of-type(2) td:nth-of-type(1) { background-color: #ffe6e6; }
-body.schedule table.table.day1 tr:nth-of-type(2) td:nth-of-type(2) { background-color: #ffe6e6; }
-/* 2   * - 08:00 - :registration:`...` */
-body.schedule table.table.day1 tr:nth-of-type(2) td:nth-of-type(3) { background-color: rgba(181, 160, 172, .3); }
-/* 3   * - 08:30 - :registration:`...` */
-body.schedule table.table.day1 tr:nth-of-type(3) { background-color: rgba(181, 160, 172,.3); }
-
-/* 4   * - 09:00 - :other:`Welcome and Introduction: Dylan Jay` */
-/* 5   * - 09:10 - Keynote Speech: Wes McKinney */
-/* 6   * - 09:55 - :break:`The Spanish Inquisition / Break` */
-body.schedule table.table.day1 tr:nth-of-type(6) { background-color: rgba(181, 160, 172,.2); }
-/* 7   * - 10:25 - `Using Python to build a smart contract in NEO blockchain`_ :beginner:`Beginner` */
-/* 8   * - 11:10 - :break:`Dog Kennel / Break` */
-body.schedule table.table.day1 tr:nth-of-type(8) { background-color: rgba(181, 160, 172,.2); }
-/* 9   * - 11:20 - `Python for Life Sciences`_ :intermediate:`Intermediate` */
-/* 10   * - 11:50 - :break:`Throatwobbler Mangrove / Break` */
-body.schedule table.table.day1 tr:nth-of-type(10) { background-color: rgba(181, 160, 172,.2); }
-/* 11   * - 11:55 - `Object detection and Human recognition with YOLO in Python`_ :beginner:`Beginner` */
-/* 12   * - 12:40 - :break:`Spam, Spam, Egg, Bacon and Spam / Lunch Break` */
+/* 1   * - 07:30 - Registration / :other:`PyLadies` */
+body.schedule table.table.day1 tbody tr:nth-of-type(1) td:nth-of-type(1) { background-color: rgba(181, 160, 172,.3); }
+body.schedule table.table.day1 tbody tr:nth-of-type(1) td:nth-of-type(2) { background-color: rgba(181, 160, 172,.3); }
+body.schedule table.table.day1 tbody tr:nth-of-type(1) td:nth-of-type(3) { background-color: #ffe6e6); }
+/* 2   * - 09:00 - :other:`Welcome and Introduction: Dylan Jay` */
+/* 3   * - 09:10 - Keynote Speech: Wes McKinney */
+/* 4   * - 09:55 - :break:`The Spanish Inquisition / Break` */
+/* 5   * - 10:25 - `Using Python to build a smart contract in NEO blockchain`_ :beginner:`Beginner` */
+/* 6   * - 11:10 - :break:`Dog Kennel / Break` */
+/* 7   * - 11:20 - `Python for Life Sciences`_ :intermediate:`Intermediate` */
+/* 8  * - 11:50 - :break:`Throatwobbler Mangrove / Break` */
+/* 9  * - 11:55 - `Object detection and Human recognition with YOLO in Python`_ :beginner:`Beginner` */
+/* 10  * - 12:40 - :break:`Spam, Spam, Egg, Bacon and Spam / Lunch Break` */
 body.schedule table.table.day1 tr:nth-of-type(12) { background-color: rgba(181, 160, 172,.2); }
-/* 13   * - 13:40 - `Rage Against The Learning Machine (A New Hope)`_ :intermediate:`Intermediate` */
-/* 14   * - 14:10 - :break:`And now for something completely different / Break` */
-body.schedule table.table.day1 tr:nth-of-type(14) { background-color: rgba(181, 160, 172,.2); }
-/* 15   * - 14:15 - `Python Software Development for Hollywood Blockbuster Movie VFX in Thailand`_ */
-/* 16   * - 15:00 - :break:`Cycling Tour / Break` */
-body.schedule table.table.day1 tr:nth-of-type(16) { background-color: rgba(181, 160, 172,.2); }
-/* 17   * - 15:10 - `Artisanal Async Adventures`_ */
-/* 18   * - 15:40 - :break:`Romanes eunt domus / Break` */
-body.schedule table.table.day1 tr:nth-of-type(18) { background-color: rgba(181, 160, 172,.2); }
-/* 19   * - 15:45 - `Creating amazing APIs in Flask with Flask RESTplus`_ :intermediate:`Intermediate` */
-/* 20   * - 16:15 - :break:`My Brain Hurts / Break` */
-body.schedule table.table.day1 tr:nth-of-type(20) { background-color: rgba(181, 160, 172,.2); }
-/* 21   * - 16:20 - `Writing a good frontend test cases using RobotFramework`_ */
-/* 22   * - 16:50 - :break:`Ministry of Silly Walks / Break` */
-body.schedule table.table.day1 tr:nth-of-type(22) { background-color: rgba(181, 160, 172,.2); }
-/* 23   * - 17:05 - Lightning Talks */
+/* 11  * - 13:40 - `Rage Against The Learning Machine (A New Hope)`_ :intermediate:`Intermediate` */
+/* 12  * - 14:10 - :break:`And now for something completely different / Break` */
+/* 13  * - 14:15 - `Python Software Development for Hollywood Blockbuster Movie VFX in Thailand`_ */
+/* 14  * - 15:00 - :break:`Cycling Tour / Break` */
+/* 15  * - 15:10 - `Artisanal Async Adventures`_ */
+/* 16  * - 15:40 - :break:`Romanes eunt domus / Break` */
+/* 17  * - 15:45 - `Creating amazing APIs in Flask with Flask RESTplus`_ :intermediate:`Intermediate` */
+/* 18  * - 16:15 - :break:`My Brain Hurts / Break` */
+/* 19  * - 16:20 - `Writing a good frontend test cases using RobotFramework`_ */
+/* 20  * - 16:50 - :break:`Ministry of Silly Walks / Break` */
+/* 21  * - 17:05 - Lightning Talks */
 
 /*      * - - Track 1 */
 /* 1    * - 08:30 - :other:`Registration Opens /  Welcome Coffee` */
