Get rid of 5min breaks, highlight workshops

--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -39,63 +39,61 @@ table.table .fa:before { margin-right: 5px; }
 /* 1   * - 07:30 - Registration / :other:`PyLadies` */
 body.schedule table.table.day1 tbody tr:nth-of-type(1) td:nth-of-type(1) { background-color: rgba(181, 160, 172,.3); }
 body.schedule table.table.day1 tbody tr:nth-of-type(1) td:nth-of-type(2) { background-color: rgba(181, 160, 172,.3); }
-body.schedule table.table.day1 tbody tr:nth-of-type(1) td:nth-of-type(3) { background-color: #ffe6e6); }
+body.schedule table.table.day1 tbody tr:nth-of-type(1) td:nth-of-type(3) { background-color: #ffe6e6; }
 /* 2   * - 09:00 - :other:`Welcome and Introduction: Dylan Jay` */
 /* 3   * - 09:10 - Keynote Speech: Wes McKinney */
 /* 4   * - 09:55 - :break:`The Spanish Inquisition / Break` */
+body.schedule table.table.day1 tr:nth-of-type(4) { background-color: rgba(181, 160, 172,.2); }
 /* 5   * - 10:25 - `Using Python to build a smart contract in NEO blockchain`_ :beginner:`Beginner` */
 /* 6   * - 11:10 - :break:`Dog Kennel / Break` */
+body.schedule table.table.day1 tr:nth-of-type(6) { background-color: rgba(181, 160, 172,.2); }
 /* 7   * - 11:20 - `Python for Life Sciences`_ :intermediate:`Intermediate` */
-/* 8  * - 11:50 - :break:`Throatwobbler Mangrove / Break` */
-/* 9  * - 11:55 - `Object detection and Human recognition with YOLO in Python`_ :beginner:`Beginner` */
-/* 10  * - 12:40 - :break:`Spam, Spam, Egg, Bacon and Spam / Lunch Break` */
+/* 8   * - 11:55 - `Object detection and Human recognition with YOLO in Python`_ :beginner:`Beginner` */
+/* 9   * - 12:40 - :break:`Spam, Spam, Egg, Bacon and Spam / Lunch Break` */
+body.schedule table.table.day1 tr:nth-of-type(9) { background-color: rgba(181, 160, 172,.2); }
+/* 10  * - 13:40 - `Rage Against The Learning Machine (A New Hope)`_ :intermediate:`Intermediate` */
+/* 11  * - 14:15 - `Python Software Development for Hollywood Blockbuster Movie VFX in Thailand`_ */
+/* 12  * - 15:00 - :break:`Cycling Tour / Break` */
 body.schedule table.table.day1 tr:nth-of-type(12) { background-color: rgba(181, 160, 172,.2); }
-/* 11  * - 13:40 - `Rage Against The Learning Machine (A New Hope)`_ :intermediate:`Intermediate` */
-/* 12  * - 14:10 - :break:`And now for something completely different / Break` */
-/* 13  * - 14:15 - `Python Software Development for Hollywood Blockbuster Movie VFX in Thailand`_ */
-/* 14  * - 15:00 - :break:`Cycling Tour / Break` */
-/* 15  * - 15:10 - `Artisanal Async Adventures`_ */
-/* 16  * - 15:40 - :break:`Romanes eunt domus / Break` */
-/* 17  * - 15:45 - `Creating amazing APIs in Flask with Flask RESTplus`_ :intermediate:`Intermediate` */
-/* 18  * - 16:15 - :break:`My Brain Hurts / Break` */
-/* 19  * - 16:20 - `Writing a good frontend test cases using RobotFramework`_ */
-/* 20  * - 16:50 - :break:`Ministry of Silly Walks / Break` */
-/* 21  * - 17:05 - Lightning Talks */
+/* 13  * - 15:10 - `Artisanal Async Adventures`_ */
+/* 14  * - 15:45 - `Creating amazing APIs in Flask with Flask RESTplus`_ :intermediate:`Intermediate` */
+/* 15  * - 16:20 - `Writing a good frontend test cases using RobotFramework`_ */
+/* 16  * - 16:50 - :break:`Ministry of Silly Walks / Break` */
+body.schedule table.table.day1 tr:nth-of-type(16) { background-color: rgba(181, 160, 172,.2); }
+/* 17  * - 17:05 - Lightning Talks */
 
 /*      * - - Track 1 */
 /* 1    * - 08:30 - :other:`Registration Opens /  Welcome Coffee` */
+body.schedule table.table.day2 tbody tr:nth-of-type(1) { background-color: rgba(181, 160, 172,.3); }
 /* 2    * - 09:10 - `Attack of Pythons: Gotchas and Landmines in Python`_ */
-body.schedule table.table.day2 tr:nth-of-type(2) td:nth-of-type(3) { background-color: rgba(181, 160, 172,.2); }
 /* 3    * - 09:40 - :break:`Fish Slapping Dance / Break` */
 body.schedule table.table.day2 tr:nth-of-type(3) { background-color: rgba(181, 160, 172,.2); }
 /* 4    * - 09:50 - `Introduction to serverless Python with AWS Lambda`_ :beginner:`Beginner` */
-body.schedule table.table.day2 tr:nth-of-type(4) td:nth-of-type(3) { background-color: rgba(181, 160, 172,.2); }
-/* 5    * - 10:20 - :break:`Dinsdale / Break` */
-body.schedule table.table.day2 tr:nth-of-type(5) { background-color: rgba(181, 160, 172,.2); }
-/* 6    * - 10:25 - `Building a sustainable codebases with Type Annotations`_ :intermediate:`Intermediate` */
-body.schedule table.table.day2 tr:nth-of-type(6) td:nth-of-type(3) { background-color: rgba(181, 160, 172,.2); }
-/* 7    * - 11:10 - :break:`Exploding Penguins on TV Set / Break` */
-body.schedule table.table.day2 tr:nth-of-type(7) { background-color: rgba(181, 160, 172,.2); }
-/* 8    * - 11:20 - `Playing with Social Network, Geo-Spatial, Financial Flow, and Banking System Data: Graph-Theoretic Computation in Python`_ */
-/* 9    * - 12:05 - :break:`Lumberjack Song / Break` */
-body.schedule table.table.day2 tr:nth-of-type(9) th { background-color: rgba(181, 160, 172,.2); }
-body.schedule table.table.day2 tr:nth-of-type(9) td:nth-of-type(1) { background-color: rgba(181, 160, 172,.2); }
-body.schedule table.table.day2 tr:nth-of-type(9) td:nth-of-type(2) { background-color: rgba(181, 160, 172,.2); }
-/* 10    * - 12:15 - `Aaaarrgghh, Spider! Web scraping with Scrapy`_ :intermediate:`Intermediate` */
-/* 11    * - 12:45 - :break:`Salmon Mousse /  Lunch Break` */
-body.schedule table.table.day2 tr:nth-of-type(11) { background-color: rgba(181, 160, 172,.2); }
-/* 12    * - 13:45 - `Enabling Blockchain Energy Trading among Smart Buildings through the Use of Multi-Agent Systems and Internet of Things Devices`_ */
-/* 13    * - 14:30 - :break:`Machine that goes "Ping!" / Break` */
-body.schedule table.table.day2 tr:nth-of-type(13) th { background-color: rgba(181, 160, 172,.2); }
-body.schedule table.table.day2 tr:nth-of-type(13) td:nth-of-type(1) { background-color: rgba(181, 160, 172,.2); }
-body.schedule table.table.day2 tr:nth-of-type(13) td:nth-of-type(2) { background-color: rgba(181, 160, 172,.2); }
-/* 14    * - 14:40 - `Python + XPath = Extra Parsing Power`_ :intermediate:`Intermediate` */
-/* 15    * - 15:10 - :break:`Cheese Shop / Break` */
+/* 5    * - 10:25 - `Building a sustainable codebases with Type Annotations`_ :intermediate:`Intermediate` */
+/* 6    * - 11:10 - :break:`Exploding Penguins on TV Set / Break` */
+body.schedule table.table.day2 tr:nth-of-type(6) { background-color: rgba(181, 160, 172,.2); }
+/* 7    * - 11:20 - `Playing with Social Network, Geo-Spatial, Financial Flow, and Banking System Data: Graph-Theoretic Computation in Python`_ */
+body.schedule table.table.day2 tr:nth-of-type(7) td:nth-of-type(3) { background-color: rgba(181, 160, 272,.2); }
+/* 8    * - 12:05 - :break:`Lumberjack Song / Break` */
+body.schedule table.table.day2 tr:nth-of-type(8) td:nth-of-type(1) { background-color: rgba(181, 160, 172,.2); }
+body.schedule table.table.day2 tr:nth-of-type(8) td:nth-of-type(2) { background-color: rgba(181, 160, 172,.2); }
+body.schedule table.table.day2 tr:nth-of-type(8) td:nth-of-type(3) { background-color: rgba(181, 160, 272,.2); }
+/* 9    * - 12:15 - `Aaaarrgghh, Spider! Web scraping with Scrapy`_ :intermediate:`Intermediate` */
+body.schedule table.table.day2 tr:nth-of-type(9) td:nth-of-type(3) { background-color: rgba(181, 160, 272,.2); }
+/* 10   * - 12:45 - :break:`Salmon Mousse /  Lunch Break` */
+body.schedule table.table.day2 tr:nth-of-type(10) { background-color: rgba(181, 160, 172,.2); }
+/* 11   * - 13:45 - `Enabling Blockchain Energy Trading among Smart Buildings through the Use of Multi-Agent Systems and Internet of Things Devices`_ */
+body.schedule table.table.day2 tr:nth-of-type(11) td:nth-of-type(3) { background-color: rgba(181, 160, 272,.2); }
+/* 12   * - 14:30 - :break:`Machine that goes "Ping!" / Break` */
+body.schedule table.table.day2 tr:nth-of-type(12) td:nth-of-type(1) { background-color: rgba(181, 160, 172,.2); }
+body.schedule table.table.day2 tr:nth-of-type(12) td:nth-of-type(2) { background-color: rgba(181, 160, 172,.2); }
+body.schedule table.table.day2 tr:nth-of-type(12) td:nth-of-type(3) { background-color: rgba(181, 160, 272,.2); }
+/* 13   * - 14:40 - `Python + XPath = Extra Parsing Power`_ :intermediate:`Intermediate` */
+body.schedule table.table.day2 tr:nth-of-type(13) td:nth-of-type(3) { background-color: rgba(181, 160, 272,.2); }
+/* 14    * - 15:15 - `Powerful geographic web framework GeoDjango`_ :beginner:`Beginner` */
+body.schedule table.table.day2 tr:nth-of-type(14) td:nth-of-type(3) { background-color: rgba(181, 160, 272,.2); }
+/* 15    * - 15:45 - :break:`Ni! / Break` */
 body.schedule table.table.day2 tr:nth-of-type(15) { background-color: rgba(181, 160, 172,.2); }
-/* 16    * - 15:15 - `Powerful geographic web framework GeoDjango`_ :beginner:`Beginner` */
-body.schedule table.table.day2 tr:nth-of-type(16) td:nth-of-type(3) { background-color: rgba(181, 160, 172,.2); }
-/* 17    * - 15:45 - :break:`Ni! / Break` */
-body.schedule table.table.day2 tr:nth-of-type(17) { background-color: rgba(181, 160, 172,.2); }
-/* 18    * - 15:55 - Lightning Talks */
-/* 19    * - 16:55 - Keynote: Tiwa York */
-/* 20    * - 17:40 - Closing */
+/* 16    * - 15:55 - Lightning Talks */
+/* 17    * - 16:55 - Keynote: Tiwa York */
+/* 18    * - 17:40 - Closing */
