--- a/site/templates/base.tmpl
+++ b/site/templates/base.tmpl
@@ -8,7 +8,7 @@ ${base.html_headstart()}
 </%block>
 ${template_hooks['extra_head']()}
 </head>
-<body class="${' '.join(pagekind)} ${permalink.replace('/', ' ')} lang_${lang} lang_${'rtl' if is_rtl else 'ltr'}">
+<body class="${' '.join(pagekind)} path-${'-'.join([p for p in permalink.replace('/'+lang+'/', '', 1).split('/') if p])}">
 <a href="#content" class="sr-only sr-only-focusable">${messages("Skip to main content")}</a>
 
 <!-- Menubar -->
