--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -10,7 +10,7 @@
     max-width: 400px;
 }
 
-body.path-frontpage header {
+body.path-2018 header, body.path-frontpage header {
     display: none;
 }
 
