--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -1,3 +1,20 @@
+/* home page */
+img.home-logo {
+    max-width: 85%;
+}
+
+.admonition-title {
+    margin-top: 1rem;
+    margin-bottom: 0.75rem;
+}
+
+a.btn > i.fa {
+    font-size: 20px;
+    vertical-align: middle;
+    margin: 0.5rem 0;
+}
+
+/* navbar */
 .navbar-inverse {
     background-color: #b5a0ac;
     border-color: #511c39;
@@ -16,7 +33,7 @@ body.path-2018 header, body.path-frontpage header {
 
 /* body[class*="schedule"] table.table td { height: 1px; }
 body[class*="schedule"] table.table td span.pyladies { display: block; height: 100%; background: green; }
-*/ 
+*/
 body[class*="schedule"] table,
 body[class*="schedule"] th,
 body[class*="schedule"] td {
