fix footer appearance

--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -27,6 +27,16 @@ a.btn > i.fa {
     max-width: 400px;
 }
 
+/* img */
+.footer-logo {
+    max-width: 75%;
+}
+
+/* footer */
+footer#footer {
+    margin-bottom: 2rem;
+}
+
 body.path-2018 header, body.path-frontpage header {
     display: none;
 }
