--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -13,7 +13,177 @@ a.btn > i.fa {
     vertical-align: middle;
     margin: 0.5rem 0;
 }
+.home-logo, .section.first.fp-section .admonition{
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.admonition .admonition-date {
+    color: #fff;
+    text-align: center;
+    font-size: 28px;
+    font-weight: bold;
+}
+.admonition .admonition-title a {
+    color: #fff;
+    margin-bottom: 15px;
+    font-size: 36px;
+    font-weight: bold;
+}
+.admonition .list-inline-item a {
+    background: #fff;
+    border: #fff;
+}
+.admonition .list-inline-item a i {
+    color: #3b91d0;
+    font-size: 20px;
+}
+/*Keynote section*/
+.keynote {
+    padding: 0 50px;
+    position: relative;
+}
+.keynote .keynote-title {
+    font-size: 36px;
+    color: #063B61;
+    position: relative;
+    display: inline-block;
+    margin-bottom: 40px;
+}
+.keynote .image-bg {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+.keynote .image-bg img {
+    width: 100%;
+    height: auto;
+}
 
+    .keynote .keynote-title:before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background: #A9173F;
+        width: 200px;
+        height: 3px;
+    }
+    .keynote .keynote-title:after {
+        content: "";
+        position: absolute;
+        bottom: -10px;
+        right: 0;
+        background: #A9173F;
+        width: 150px;
+        height: 3px;
+    }
+.keynote .section-Wes {
+    padding-top: 50px;
+}
+.keynote .section-tiwa {
+    padding-top: 50px;
+    text-align: right;
+}
+.keynote [class*="section"] 
+    .name {
+        font-size: 24px;
+        color: #1C6698;
+    }
+.keynote [class*="section"] 
+    .website a {
+        font-size: 24px;
+        color: #B33255;
+    }
+.keynote [class*="section"] 
+    .content {
+        font-size: 24px;
+        color: #7D8890;
+    }
+.keynote [class*="section"] p { margin-bottom: 10px;}
+/*Code War Section*/
+.section.third .code-war {
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: 0 -50% 0 0;
+    text-align: center;
+    transform: translate(-50%, -50%);
+}
+.section.third .code-war h2 {
+    font-size: 3rem;
+    margin-bottom: 2rem;
+}
+.section.third .code-war p {
+    font-size: 2rem;
+}
+.section.third .fp-scroller {
+    overflow: unset;
+}
+/*section-lastest-news*/
+.section.fourth {
+    background: #74C0F5;
+    padding: 50px 0;
+}
+.section-lastest-news .rounded {
+    border: #000 1px solid;
+    background: #fff;
+}
+.section-lastest-news h3 {
+    color: #fff;
+    font-size: 36px;
+}
+    .section-lastest-news h3 span a {
+            color: #fff;
+            font-size: 16px;
+            display: inline-block;
+            padding-left: 10px;
+    }
+.section-lastest-news h4 {
+    font-size: 20px;
+    font-weight: bold;
+    color: #1B6598;
+    font-weight: bold;
+    padding: 5px;
+}
+    
+.section-lastest-news .date {
+    color: #1B6598;
+    margin-bottom: 10px;
+    padding: 0 5px;
+}
+    .section-lastest-news .date .time {
+        display: inline-block;
+        padding-left: 10px;
+    }
+.section-lastest-news img {
+    margin-bottom: 10px;
+}
+.section-lastest-news .content {
+    color: #1B6598;
+    margin-bottom: 10px;
+    padding: 0 5px;
+}
+.section-lastest-news .view-more {
+    color: #1B6598;
+    font-weight: bold;
+    text-align: right;
+    padding: 0 5px;
+    display: block;
+}
+/*section sponsor*/
+.sponsor h3 {
+    display: block;
+    text-align: center;
+    font-size: 36px;
+    color: #0D4165;
+    border-bottom: 1px solid #BF526F;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+}
 /* fullpage */
 .navbar {
     z-index: 999;
