--- a/site/themes/pyconth/assets/css/custom.css
+++ b/site/themes/pyconth/assets/css/custom.css
@@ -181,9 +181,36 @@ a.btn > i.fa {
     font-size: 36px;
     color: #0D4165;
     border-bottom: 1px solid #BF526F;
-    padding-bottom: 15px;
-    margin-bottom: 15px;
+    padding: 30px 0 15px;
+    margin: 30px 0 15px;
+    font-weight: bold;
 }
+.sponsor img {
+    margin-bottom: 30px;
+}
+/*Footer*/
+footer {
+    background: #053A60;
+    padding: 20px 0;
+    color: #fff;
+}
+    footer .about {
+        text-align: right;
+    }
+        footer .about ul {
+            list-style: none;
+            padding: 0;
+            text-align: right;
+            overflow: hidden;
+        }
+            footer .about ul li {
+                display: inline-block;
+                text-align: right;
+            }
+                footer .about ul li a {
+                    color: #fff;
+                }
+                     
 /* fullpage */
 .navbar {
     z-index: 999;
